testsuite/tests/module/T25901_exp_plain_wc.hs
module T25901_exp_plain_wc (..) where

data T = MkT